--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = adafruit/Adafruit MPU6050 @ ^2.0.3
-    adafruit/Adafruit Unified Sensor @ ^1.1.4
+; lib_deps = 
+; 	adafruit/Adafruit MPU6050 @ ^2.0.3
+; 	adafruit/Adafruit Unified Sensor @ ^1.1.4
