--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-; lib_deps = 
-; 	adafruit/Adafruit MPU6050 @ ^2.0.3
-; 	adafruit/Adafruit Unified Sensor @ ^1.1.4
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	mathertel/Radio@^2.0.0
